pipelines_implementation/manifests/tasks-dev/fm-svc-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fruit_management
  name: fruit_management
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fruit_management
    deploymentconfig: fruit_management
  sessionAffinity: None
  type: ClusterIP
